@@ -8,6 +8,9 @@ Under development
 Features added
 --------------
 
+* Injecting default attributes into a document during XML Schema
+  validation (also at parse time).
+
 * Pass ``huge_tree`` parser option to disable parser security
   restrictions imposed by libxml2 2.7.
 
